// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CveType default style should show a Kubernetes CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Kubernetes CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show a Kubernetes and OpenShift CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Kubernetes CVE
      </div>
      <div
        class="flex justify-center"
      >
        OpenShift CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show a Node and Kubernetes CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Kubernetes CVE
      </div>
      <div
        class="flex justify-center"
      >
        Node CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show a node CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Node CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show an Image and Node CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Image CVE
      </div>
      <div
        class="flex justify-center"
      >
        Node CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show an Istio CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Istio CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show an OpenShift CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        OpenShift CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show an image CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Image CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;
